Revamp SquadBuilder new UI and Constants integration